Include main.js relatively

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     integrity="sha256-2JaAhvdQnfNMMnhWPauHOZ2k+dzftBmBjjownu3HC4g=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/ejs@3.1.5/ejs.min.js"
     integrity="sha256-HZc7mcr3GLU7ltSpXUAOtKEnhpTuNBT7tZZ/TeFJBnA=" crossorigin="anonymous"></script>
-  <script src="/javascript/main.js" type="module" async defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/nunjucks@3.2.2/browser/nunjucks.min.js"
+    integrity="sha256-1HSwnJjETS37NZkjWdgnAlxxt4+J4SscZN0EEH8s7PI=" crossorigin="anonymous"></script>
+  <script src="javascript/main.js" type="module" async defer></script>
 </body>
 
 </html>
