--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     integrity="sha256-HZc7mcr3GLU7ltSpXUAOtKEnhpTuNBT7tZZ/TeFJBnA=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/nunjucks@3.2.2/browser/nunjucks.min.js"
     integrity="sha256-1HSwnJjETS37NZkjWdgnAlxxt4+J4SscZN0EEH8s7PI=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js" 
+    integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="javascript/main.js" type="module" async defer></script>
 </body>
 
