--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class="container" id="todo-list-collection-container">
+  <div class="container-fluid" id="todo-list-collection-container">
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
     integrity="sha256-WeLjw8JYAtNUcyjqluHrkVYN1fpL7TtakwRhaRgUx8s=" crossorigin="anonymous"></script>
