Added Pug template engine

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     integrity="sha256-k3aSiLPrY//wLUBAa6TS1J9Itw8xV2zcMw7n9iaFbz8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js" 
     integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://pugjs.org/js/pug.js"></script>
   <script src="javascript/main.js" type="module" async defer></script>
 </body>
 
